feat: improve content and UI

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Esraa Nasr | Frontend developer</title>
 
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
     </style>
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 <body>
 
@@ -17,14 +18,14 @@
         <div class="social-icons">
             <div class="line"></div>
             <div class="icons">
-                <a href="#"><img src="images/Github.svg" alt="Github icon"></a>
-                <a href="#"><img src="images/Linkedin.svg" alt="Linkedin icon"></a>
-                <a href="#"><img src="images/Twitter.svg" alt="Twitter icon"></a>
+                <a href="https://github.com/EsraaNasr92" target="_blank"><img src="images/Github.svg" alt="Github icon"></a>
+                <a href="https://www.linkedin.com/in/esraanasr-webdev/" target="_blank"><img src="images/Linkedin.svg" alt="Linkedin icon"></a>
+                <a href="https://x.com/__ecupcake" target="_blank"><img src="images/Twitter.svg" alt="Twitter icon"></a>
             </div>
         </div>
         <header>
             <div class="logo">
-                <a href="/"><img src="images/DefaultLogo.svg" alt="Logo"></a>
+                <a href="/">~esraa</a>
             </div>
         
             <!-- Burger icon button for mobile -->
@@ -36,46 +37,31 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="/" class="active"><span>#</span>home</a></li>
-                        <li><a href="#"><span>#</span>works</a></li>
-                        <li><a href="#"><span>#</span>about-me</a></li>
-                        <li><a href="#"><span>#</span>contacts</a></li>
+                        <li><a href="#me" class="active"><span>#</span>home</a></li>
+                        <li><a href="#work"><span>#</span>works</a></li>
+                        <li><a href="#about"><span>#</span>about-me</a></li>
+                        <li><a href="#contact"><span>#</span>contacts</a></li>
                     </ul>
                 </nav>
-<!--                 <div class="mobile-social-icons">
-                    <div class="line"></div>
-                    <div class="icons">
-                        <a href="#"><img src="images/Github.svg" alt="Github icon"></a>
-                        <a href="#"><img src="images/Linkedin.svg" alt="Linkedin icon"></a>
-                        <a href="#"><img src="images/Twitter.svg" alt="Twitter icon"></a>
-                    </div>
-                </div> -->
             </div>
         </header>
-        <div class="banner">
+        <div class="banner" id="me">
             <div class="banner-text">
-                <h1>Esraa is a <span>web designer</span> and <span>front-end developer</span></h1>
-                <p>She crafts responsive websites where technologies meet creativity</p>
-                <button class="primary">Contact me!!</button>
+                <h1>Hi, I'm Esraa <span>Front-End Developer</span> crafting fast, scalable interfaces</h1>
+                <p>React • JavaScript • UI/UX • Responsive Design <br />
+                    I turn complex ideas into smooth user experiences.</p>
+                <a class="primary" href="#contact">Hire me</a>
             </div>
             <div class="banner-img">
                 <img src="images/banner-img.svg" alt="Banner Image">
                 <div class="current-status">
                     <div class="rectangle"></div>
-                    <div class="text">Currently working on <span>Portfolio</span></div>
+                    <div class="text">Building something exciting <span>Noted</span></div>
                 </div>
             </div>
         </div>
-        <!-- Start quote section -->
-        <div class="quote">
-            <div class="top-quote"></div>
-            <div class="quote-text">With great power comes great electricity bill</div>
-            <div class="bottom-quote"></div>
-        </div>
-        <div class="quote-author">- Dr. Who</div>
-        <!-- End quote section -->
         <!-- Start project section -->
-        <div class="projects">
+        <div class="projects" id="work">
             <div class="title">
                 <div class="title-text">
                     <h1><span>#</span>projects</h1>
@@ -87,70 +73,72 @@
             </div>
             <div class="cards">
                 <div class="project-cards">
+                    <a href="https://thanksgiving-wheat.vercel.app/" target="_blank">
+                        
+                    </a>
                     <img src="images/project-img.jpg" alt="project images">
                     <div class="project-language">
-                        <a href="#">HTML</a>
-                        <a href="#">SCSS</a>
-                        <a href="#">Python</a>
                         <a href="#">React</a>
+                        <a href="#">UI/UX</a>
+                        <a href="#">Tailwind CSS</a>
                     </div>
                     <div class="project-description">
-                        <h1 class="title">ChertNodes</h1>
-                        <p class="description">Mincraft servers hosting</p>
+                        <h1 class="title">Thanksgiving</h1>
+                        <p class="description">Minimal Thanksgiving-themed web page featuring a wheat motif with clean, responsive design.</p>
                         <div class="project-btns">
-                            <button class="primary">Live <~></button>
-                            <button class="secondary">Cached ></button>
+                            <a class="primary" href="https://thanksgiving-wheat.vercel.app/" target="_blank">Live <~></a>
                         </div>
                     </div>
                 </div>
                     <div class="project-cards">
                     <img src="images/project-img.jpg" alt="project images">
                     <div class="project-language">
-                        <a href="#">HTML</a>
-                        <a href="#">SCSS</a>
-                        <a href="#">Python</a>
                         <a href="#">React</a>
+                        <a href="#">React Router</a>
+                        <a href="#">Tailwind CSS</a>
+                        <a href="#">NodeJS</a>
+                        <a href="#">Express</a>
+                        <a href="#">MongoDB</a>
                     </div>
                     <div class="project-description">
-                        <h1 class="title">ChertNodes</h1>
-                        <p class="description">Mincraft servers hosting</p>
+                        <h1 class="title">Noted</h1>
+                        <p class="description">A responsive note‑taking web app with intuitive UI for creating, editing, and managing notes</p>
                         <div class="project-btns">
-                            <button class="primary">Live <~></button>
-                            <button class="secondary">Cached ></button>
+                            <a class="primary" href="https://noted-eight.vercel.app/" target="_blank">Live <~></a>
                         </div>
                     </div>
                 </div>
                 <div class="project-cards">
                     <img src="images/project-img.jpg" alt="project images">
                     <div class="project-language">
-                        <a href="#">HTML</a>
-                        <a href="#">SCSS</a>
-                        <a href="#">Python</a>
                         <a href="#">React</a>
+                        <a href="#">Node.JS</a>
+                        <a href="#">Express.js</a>
+                        <a href="#">MongoDB</a>
+                        <a href="#">Tailwind CSS</a>
                     </div>
                     <div class="project-description">
-                        <h1 class="title">ChertNodes</h1>
-                        <p class="description">Mincraft servers hosting</p>
+                        <h1 class="title">Signing</h1>
+                        <p class="description">Secure login and signup web app with user authentication and session management.</p>
                         <div class="project-btns">
-                            <button class="primary">Live <~></button>
-                            <button class="secondary">Cached ></button>
+                            <a class="primary" href="https://mern-login-signup-delta.vercel.app/" target="_blank">Live <~></a>
                         </div>
                     </div>
                 </div>
                 <div class="project-cards">
                     <img src="images/project-img.jpg" alt="project images">
                     <div class="project-language">
-                        <a href="#">HTML</a>
-                        <a href="#">SCSS</a>
-                        <a href="#">Python</a>
                         <a href="#">React</a>
+                        <a href="#">NodeJS</a>
+                        <a href="#">Express</a>
+                        <a href="#">Google Map</a>
+                        <a href="#"> Google Places</a>
                     </div>
                     <div class="project-description">
-                        <h1 class="title">ChertNodes</h1>
-                        <p class="description">Mincraft servers hosting</p>
+                        <h1 class="title">Resturant Finder app</h1>
+                        <p class="description">Responsive restaurant finder web app for quickly searching and exploring local dining options.</p>
                         <div class="project-btns">
-                            <button class="primary">Live <~></button>
-                            <button class="secondary">Cached ></button>
+                            <a class="primary" href="https://restaurant-finder-pink.vercel.app/" target="_blank">Live <~></a>
                         </div>
                     </div>
                 </div>
@@ -158,61 +146,75 @@
         </div>
         <!-- End project section -->
         <!-- Start skills section -->
-        <div class="skills">
-            <div class="title">
-                <div class="title-text">
-                    <h1><span>#</span>skills</h1>
-                    <div class="title-line"></div>
+<div class="skills">
+    <div class="title">
+        <div class="title-text">
+            <h1><span>#</span>skills</h1>
+            <div class="title-line"></div>
+        </div>
+    </div>
+    <div class="skills-section">
+        <div class="skills-section_img">
+            <img src="images/skills-img.svg" alt="skills image">
+        </div>
+        <div class="skills-section_cards">
+            <!-- Languages -->
+            <div class="skills-section_cards_boxs">
+                <h1 class="title">Languages</h1>
+                <div class="tools">
+                    <p>JavaScript</p>
+                    <p>Python</p>
                 </div>
             </div>
-            <div class="skills-section">
-                <div class="skills-section_img">
-                    <img src="images/skills-img.svg" alt="skills image">
+
+            <!-- Databases -->
+            <div class="skills-section_cards_boxs">
+                <h1 class="title">Databases</h1>
+                <div class="tools">
+                    <p>MongoDB</p>
+                    <p>PostgreSQL</p>
+                    <p>MySQL</p>
                 </div>
-                <div class="skills-section_cards">
-                    <div class="skills-section_cards_boxs">
-                        <h1 class="title">Language</h1>
-                        <div class="tools">
-                            <p>TypeScript Lua</p>
-                            <p>Python JavaScript</p>
-                        </div>
-                    </div>
-                    <div class="skills-section_cards_boxs">
-                        <h1 class="title">Database</h1>
-                        <div class="tools">
-                            <p>SQLite PostgresSQL</p>
-                            <p>Mongo</p>
-                        </div>
-                    </div>
-                    <div class="skills-section_cards_boxs">
-                        <h1 class="title">Tools</h1>
-                        <div class="tools">
-                            <p>Git Font Awesome Linux</p>
-                            <p>Git Font Awesome Linux</p>
-                            <p>Git Font Awesome Linux</p>
-                        </div>
-                    </div>
-                    <div class="skills-section_cards_boxs">
-                        <h1 class="title">Frameworks</h1>
-                        <div class="tools">
-                            <p>React Vue</p>
-                            <p>Mongo React Bootstrap</p>
-                            <p>Bootstrap Mongo</p>
-                        </div>
-                    </div>
-                    <div class="skills-section_cards_boxs">
-                        <h1 class="title">Other</h1>
-                        <div class="tools">
-                            <p>HTML CSS EJS SCSS</p>
-                            <p>REST Jinja</p>
-                        </div>
-                    </div>
+            </div>
+
+            <!-- Tools -->
+            <div class="skills-section_cards_boxs">
+                <h1 class="title">Tools</h1>
+                <div class="tools">
+                    <p>Git</p>
+                    <p>Linux</p>
+                    <p>Font Awesome</p>
+                </div>
+            </div>
+
+            <!-- Frameworks & Libraries -->
+            <div class="skills-section_cards_boxs">
+                <h1 class="title">Frameworks & Libraries</h1>
+                <div class="tools">
+                    <p>React</p>
+                    <p>Bootstrap</p>
+                    <p>Tailwind CSS</p>
+                    <p>Express</p>
+                </div>
+            </div>
+
+            <!-- Other -->
+            <div class="skills-section_cards_boxs">
+                <h1 class="title">Other</h1>
+                <div class="tools">
+                    <p>HTML</p>
+                    <p>CSS / SCSS</p>
+                    <p>EJS</p>
+                    <p>REST API</p>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
         <!-- End skills section -->
         <!-- Start About section-->
-        <div class="about">
+        <div class="about" id="about">
             <div class="title">
                 <div class="title-text">
                     <h1><span>#</span>about-me</h1>
@@ -222,14 +224,15 @@
             <div class="about-section">
                 <div class="about-text">
                     <p>Hello, i’m Esraa!</p>
-                    <p>I’m a self-taught front-end developer based in Kyiv, Ukraine.
-                        I can develop responsive websites from scratch and raise them
-                        into modern user-friendly web experiences.</p>
-                    <p>Transforming my creativity and knowledge into a websites has been
-                        my passion for over a year. I have been helping various clients
-                        to establish their presence online. I always strive to learn
-                        about the newest technologies and frameworks.</p>
-                    <button class="primary">Read more -></button>
+                    <p>I’m Esraa, a frontend developer passionate about building efficient, scalable,
+                        and modern web applications. I specialize in JavaScript, React, and responsive
+                        design, turning complex ideas into intuitive and visually appealing digital
+                        experiences. My focus is always on bridging the gap between design and
+                        functionality, ensuring every project is both beautiful and user-friendly.</p>
+                    <p>I thrive on solving challenging problems and continuously exploring new
+                        technologies to bring innovative ideas to life on the web.
+                        Whether it’s crafting seamless user interfaces or optimizing performance,
+                        I aim to create experiences that delight users and drive results.</p>
                 </div>
                 <div class="about-img">
                     <img src="images/about-me.svg" alt="About me">
@@ -239,7 +242,7 @@
         </div>
         <!-- End About section-->
         <!--Start contact section -->
-        <div class="contact">
+        <div class="contact" id="contact">
             <div class="title">
                 <div class="title-text">
                     <h1><span>#</span>contact-me</h1>
@@ -254,7 +257,7 @@
                 </div>
                 <div class="contact-info">
                     <h3>Message me here</h3>
-                    <p><img src="images/Email.svg" alt="email"> me@esraanasr.com</p>
+                    <p><img src="images/Email.svg" alt="email"> <a href="mailto:me@esraa.dev">me@esraanasr.com</a></p>
                 </div>
             </div>
 
@@ -263,24 +266,12 @@
         <!--Start footer section -->
         <div class="footer">
             <div class="copyright">
-                <p>© Copyright 2025. Made by Esraa</p>
+                <p>© Copyright 2025. absolutely made by me</p>
                 </div>
             </div>
-
         </div>
         <!-- End footer section -->
     </div>
-
-
-<!--
-        <button class="primary">Live <~></button>
-    <button class="secondary">Demo |></button>
-
-    <div class="input-wrapper">
-        <input type="text" id="name" placeholder=" ">
-        <label for="name">Name</label>
-    </div>
--->
 
 
     <script src="scripts/script.js"></script>
