--- a/index.html
+++ b/index.html
@@ -61,156 +61,161 @@
             </div>
         </div>
         <!-- Start project section -->
-        <div class="projects" id="work">
-            <div class="title">
-                <div class="title-text">
-                    <h1><span>#</span>projects</h1>
-                    <div class="title-line"></div>
-                </div>
-                <div class="title-link">
-                    <a href="#">View all ~~></a>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="project-cards">
-                    <a href="https://thanksgiving-wheat.vercel.app/" target="_blank">
-                        
-                    </a>
-                    <img src="images/project-img.jpg" alt="project images">
-                    <div class="project-language">
-                        <a href="#">React</a>
-                        <a href="#">UI/UX</a>
-                        <a href="#">Tailwind CSS</a>
-                    </div>
-                    <div class="project-description">
-                        <h1 class="title">Thanksgiving</h1>
-                        <p class="description">Minimal Thanksgiving-themed web page featuring a wheat motif with clean, responsive design.</p>
-                        <div class="project-btns">
-                            <a class="primary" href="https://thanksgiving-wheat.vercel.app/" target="_blank">Live <~></a>
-                        </div>
-                    </div>
-                </div>
-                    <div class="project-cards">
-                    <img src="images/project-img.jpg" alt="project images">
-                    <div class="project-language">
-                        <a href="#">React</a>
-                        <a href="#">React Router</a>
-                        <a href="#">Tailwind CSS</a>
-                        <a href="#">NodeJS</a>
-                        <a href="#">Express</a>
-                        <a href="#">MongoDB</a>
-                    </div>
-                    <div class="project-description">
-                        <h1 class="title">Noted</h1>
-                        <p class="description">A responsive note‑taking web app with intuitive UI for creating, editing, and managing notes</p>
-                        <div class="project-btns">
-                            <a class="primary" href="https://noted-eight.vercel.app/" target="_blank">Live <~></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-cards">
-                    <img src="images/project-img.jpg" alt="project images">
-                    <div class="project-language">
-                        <a href="#">React</a>
-                        <a href="#">Node.JS</a>
-                        <a href="#">Express.js</a>
-                        <a href="#">MongoDB</a>
-                        <a href="#">Tailwind CSS</a>
-                    </div>
-                    <div class="project-description">
-                        <h1 class="title">Signing</h1>
-                        <p class="description">Secure login and signup web app with user authentication and session management.</p>
-                        <div class="project-btns">
-                            <a class="primary" href="https://mern-login-signup-delta.vercel.app/" target="_blank">Live <~></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-cards">
-                    <img src="images/project-img.jpg" alt="project images">
-                    <div class="project-language">
-                        <a href="#">React</a>
-                        <a href="#">NodeJS</a>
-                        <a href="#">Express</a>
-                        <a href="#">Google Map</a>
-                        <a href="#"> Google Places</a>
-                    </div>
-                    <div class="project-description">
-                        <h1 class="title">Resturant Finder app</h1>
-                        <p class="description">Responsive restaurant finder web app for quickly searching and exploring local dining options.</p>
-                        <div class="project-btns">
-                            <a class="primary" href="https://restaurant-finder-pink.vercel.app/" target="_blank">Live <~></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End project section -->
-        <!-- Start skills section -->
-<div class="skills">
+<div class="projects" id="work">
+    <!-- Title -->
     <div class="title">
         <div class="title-text">
-            <h1><span>#</span>skills</h1>
+            <h1><span>#</span>projects</h1>
             <div class="title-line"></div>
         </div>
-    </div>
-    <div class="skills-section">
-        <div class="skills-section_img">
-            <img src="images/skills-img.svg" alt="skills image">
+        <div class="title-link">
+            <a href="#">View all ~~></a>
         </div>
-        <div class="skills-section_cards">
-            <!-- Languages -->
-            <div class="skills-section_cards_boxs">
-                <h1 class="title">Languages</h1>
-                <div class="tools">
-                    <p>JavaScript</p>
-                    <p>Python</p>
+    </div>
+
+    <!-- Filters -->
+    <div class="project-filters">
+        <button class="active" data-filter="all">All</button>
+        <button data-filter="real">Real Projects</button>
+        <button data-filter="side">Side Projects</button>
+    </div>
+
+    <!-- Project Cards -->
+    <div class="cards">
+        <!-- Side Project -->
+        <div class="project-cards" data-type="side">
+            <span class="project-badge side">Side Project</span>
+            <div class="project-img">
+                <img src="images/project-img.jpg" alt="Thanksgiving project">
+            </div>
+            <div class="project-language">
+                <a href="#">React</a>
+                <a href="#">UI/UX</a>
+                <a href="#">Tailwind CSS</a>
+            </div>
+            <div class="project-description">
+                <h1 class="title">Thanksgiving</h1>
+                <p class="description">Minimal Thanksgiving-themed web page featuring a wheat motif with clean, responsive design.</p>
+                <div class="project-btns">
+                    <a class="primary" href="https://thanksgiving-wheat.vercel.app/" target="_blank">Live <~></a>
                 </div>
             </div>
+        </div>
 
-            <!-- Databases -->
-            <div class="skills-section_cards_boxs">
-                <h1 class="title">Databases</h1>
-                <div class="tools">
-                    <p>MongoDB</p>
-                    <p>PostgreSQL</p>
-                    <p>MySQL</p>
+        <!-- Real Project -->
+        <div class="project-cards" data-type="real">
+            <span class="project-badge real">Real Project</span>
+            <div class="project-img">
+                <img src="images/project-img.jpg" alt="Noted project">
+            </div>
+            <div class="project-language">
+                <a href="#">React</a>
+                <a href="#">React Router</a>
+                <a href="#">Tailwind CSS</a>
+                <a href="#">NodeJS</a>
+                <a href="#">Express</a>
+                <a href="#">MongoDB</a>
+            </div>
+            <div class="project-description">
+                <h1 class="title">Noted</h1>
+                <p class="description">A responsive note‑taking web app with intuitive UI for creating, editing, and managing notes</p>
+                <div class="project-btns">
+                    <a class="primary" href="https://noted-eight.vercel.app/" target="_blank">Live <~></a>
                 </div>
             </div>
+        </div>
 
-            <!-- Tools -->
-            <div class="skills-section_cards_boxs">
-                <h1 class="title">Tools</h1>
-                <div class="tools">
-                    <p>Git</p>
-                    <p>Linux</p>
-                    <p>Font Awesome</p>
-                </div>
+        <!-- Side Project -->
+        <div class="project-cards" data-type="side">
+            <span class="project-badge side">Side Project</span>
+            <div class="project-img">
+                <img src="images/project-img.jpg" alt="Signing project">
             </div>
-
-            <!-- Frameworks & Libraries -->
-            <div class="skills-section_cards_boxs">
-                <h1 class="title">Frameworks & Libraries</h1>
-                <div class="tools">
-                    <p>React</p>
-                    <p>Bootstrap</p>
-                    <p>Tailwind CSS</p>
-                    <p>Express</p>
-                </div>
+            <div class="project-language">
+                <a href="#">React</a>
+                <a href="#">Node.JS</a>
+                <a href="#">Express.js</a>
+                <a href="#">MongoDB</a>
+                <a href="#">Tailwind CSS</a>
             </div>
-
-            <!-- Other -->
-            <div class="skills-section_cards_boxs">
-                <h1 class="title">Other</h1>
-                <div class="tools">
-                    <p>HTML</p>
-                    <p>CSS / SCSS</p>
-                    <p>EJS</p>
-                    <p>REST API</p>
+            <div class="project-description">
+                <h1 class="title">Signing</h1>
+                <p class="description">Secure login and signup web app with user authentication and session management.</p>
+                <div class="project-btns">
+                    <a class="primary" href="https://mern-login-signup-delta.vercel.app/" target="_blank">Live <~></a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+            <!-- End project section -->
+            <!-- Start skills section -->
+    <div class="skills">
+        <div class="title">
+            <div class="title-text">
+                <h1><span>#</span>skills</h1>
+                <div class="title-line"></div>
+            </div>
+        </div>
+        <div class="skills-section">
+            <div class="skills-section_img">
+                <img src="images/skills-img.svg" alt="skills image">
+            </div>
+            <div class="skills-section_cards">
+                <!-- Languages -->
+                <div class="skills-section_cards_boxs">
+                    <h1 class="title">Languages</h1>
+                    <div class="tools">
+                        <p>JavaScript</p>
+                        <p>Python</p>
+                    </div>
+                </div>
+
+                <!-- Databases -->
+                <div class="skills-section_cards_boxs">
+                    <h1 class="title">Databases</h1>
+                    <div class="tools">
+                        <p>MongoDB</p>
+                        <p>PostgreSQL</p>
+                        <p>MySQL</p>
+                    </div>
+                </div>
+
+                <!-- Tools -->
+                <div class="skills-section_cards_boxs">
+                    <h1 class="title">Tools</h1>
+                    <div class="tools">
+                        <p>Git</p>
+                        <p>Linux</p>
+                        <p>Font Awesome</p>
+                    </div>
+                </div>
+
+                <!-- Frameworks & Libraries -->
+                <div class="skills-section_cards_boxs">
+                    <h1 class="title">Frameworks & Libraries</h1>
+                    <div class="tools">
+                        <p>React</p>
+                        <p>Bootstrap</p>
+                        <p>Tailwind CSS</p>
+                        <p>Express</p>
+                    </div>
+                </div>
+
+                <!-- Other -->
+                <div class="skills-section_cards_boxs">
+                    <h1 class="title">Other</h1>
+                    <div class="tools">
+                        <p>HTML</p>
+                        <p>CSS / SCSS</p>
+                        <p>EJS</p>
+                        <p>REST API</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
         <!-- End skills section -->
         <!-- Start About section-->
@@ -224,7 +229,7 @@
             <div class="about-section">
                 <div class="about-text">
                     <p>Hello, i’m Esraa!</p>
-                    <p>I’m Esraa, a frontend developer passionate about building efficient, scalable,
+                    <p>A frontend developer passionate about building efficient, scalable,
                         and modern web applications. I specialize in JavaScript, React, and responsive
                         design, turning complex ideas into intuitive and visually appealing digital
                         experiences. My focus is always on bridging the gap between design and
